# fernet_encrypt

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .pylintrc  Justfile  README.md  pyproject.toml  setup.cfg
dev-scripts/: build  install
pysrc/fernet_encrypt/: __init__.py  __main__.py
pytests/: conftest.py  test_0pythonpath.py  test_cli.py
pytests/data/: data.txt  encrypted.out
pytests/data/keys/: test.key
